--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
         </div>
         <h1>Taewon Kim</h1>
         <div class="links">
-          <a href="https://www.instagram.com/rlaxodnjs485/"
+          <a href="https://www.instagram.com/rlaxodnjs485/" target="blank"
             ><i class="fab fa-instagram"></i
           ></a>
-          <a href="https://www.facebook.com/profile.php?id=100006715723844"
+          <a
+            href="https://www.facebook.com/profile.php?id=100006715723844"
+            target="blank"
             ><i class="fab fa-facebook-square"></i
           ></a>
         </div>
